objects/ssmg__Environment__c.object
<CustomObject>
    <fields>
        <fullName>ssmg__Password__c</fullName>
        <inlineHelpText>Add user’s security token to the end of password in order to log in. A security token is an
automatically-generated key from Salesforce. For example, if a user’s password is mypass, and the
security token is XXXXXX, then the user must enter mypassXXXXXX</inlineHelpText>
        <label>Password and Security Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ssmg__Realhost__c</fullName>
        <label>Realhost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssmg__Session_Id__c</fullName>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssmg__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ssmg__Unique_Name__c</fullName>
        <label>Environment Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ssmg__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Environment</label>
    <listViews>
        <fullName>ssmg__All</fullName>
        <columns>NAME</columns>
        <columns>ssmg__Unique_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ENV-{0000}</displayFormat>
        <label>Environment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>